--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,17 @@
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       var socket = io();
-      $('form').submit(function(){
-        socket.emit('chat message', $('#m').val());
-        $('#m').val('');
-        return false;
-      });
       socket.on('chat message', function(msg){
         $('#messages').append($('<li>').text(msg));
       });
+
+      function sendMessage() {
+        socket.emit('chat message', $('#m').val());
+        return false;
+      }
+
+      var e = document.getElementById('m');
+      e.oninput = sendMessage;
     </script>
   </body>
 </html>
