--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <style>
     h1{font-size: 50px}
     h2{font-size:25px}
-      * {color:#DEE5F4;outline:none; margin: 0; padding: 0; box-sizing: border-box; }
+      * {color:#000000;outline:none; margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px  Arial; background-color: #2171D3}
       .winnerDisplay { font: 24px Arial; background: green; display: none;}
       .loserDisplay { font: 24px Arial; background: red; display: none;}
@@ -46,9 +46,7 @@
 
         </div>
           <form>
-            <fieldset disabled>
               <textarea id="toMatch"/></textarea>
-            </fieldset>
           </form>
 
           <br><br>
@@ -59,7 +57,7 @@
 
           </div>
           <form>
-            <input id="yourText" autocomplete="off" />
+            <input id="yourText" autocomplete="off" disabled="true" />
         </form>
         <div class="opponenttypingArea">
             <br><br>
@@ -78,6 +76,7 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
+      var hasStarted = false;
       var toMatch = document.getElementById('toMatch');
       toMatch.value = 'Waiting on opponent....';
 
@@ -90,21 +89,28 @@
       socket.on('winner', function(){
         var loserDisplay = document.getElementById('loserDisplay');
         loserDisplay.style.display = 'inline';
+        document.getElementById('yourText').disabled = true;
       });
 
       socket.on('start', function(msg){
+        hasStarted = true;
         toMatch = document.getElementById('toMatch');
         toMatch.value = msg;
+        yourText = document.getElementById('yourText');
+        yourText.disabled = false;
 
       });
 
       function sendMessage() {
-        socket.emit('chat message', $('#yourText').val());
-        var toMatch = document.getElementById('toMatch');
-        var yourText = document.getElementById('yourText');
-        if(yourText.value == toMatch.value)
+        if(hasStarted)
         {
-          winner();
+          socket.emit('chat message', $('#yourText').val());
+          var toMatch = document.getElementById('toMatch');
+          var yourText = document.getElementById('yourText');
+          if(yourText.value == toMatch.value)
+          {
+            winner();
+          }
         }
       }
 
@@ -113,10 +119,20 @@
         winnerDisplay.style.display = 'inline';
         //Have to send winner command with parameter of the specific room we are in and which user won
         socket.emit('winner', '');
+        document.getElementById('yourText').disabled = true;
       }
 
       var e = document.getElementById("yourText");
       e.oninput = sendMessage;
+
+      toMatch = document.getElementById('toMatch');
+      toMatch.oninput = autoResize;
+      function autoResize()
+      {
+        toMatch.style.height = 'auto';
+        toMatch.style.height = toMatch.scrollHeight+'px';
+      } 
+
     </script>
   </body>
 </html>
